--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_grupo">GrupoActivity</string>
+    <string name="title_activity_cadastro_grupo2">CadastroGrupoActivity</string>
 </resources>
